Fix vertical alignment of tag actions

--- a/components/TagField/styles.module.scss
+++ b/components/TagField/styles.module.scss
@@ -44,7 +44,6 @@
 
 		&-action {
 			display: inline-block;
-			vertical-align: middle;
 			opacity: 0.5;
 			color: inherit;
 			text-decoration: none;
